backend/src/main/java/com/example/syncmeet/error/exception/EntityNotFoundException.java
package com.example.syncmeet.error.exception;

public class EntityNotFoundException extends jakarta.persistence.EntityNotFoundException {

    public EntityNotFoundException(String message) { super(message);}
}
